--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'checkstyle'
+    id 'com.squareup.wire' version '4.3.0'
 }
 
 test {
@@ -16,6 +17,11 @@ checkstyle {
     ignoreFailures false
     showViolations true
     toolVersion checkstyleVersion
+}
+
+wire {
+    java {
+    }
 }
 
 checkstyleTest {
