--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.15.3'
     implementation "com.github.spotbugs:spotbugs-annotations:$spotbugsVersion"
     implementation 'org.nibor.autolink:autolink:0.10.0'
+    implementation "com.google.protobuf:protobuf-java:3.11.0"
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
 
     // do not upgrade to 1.7.14, since in 1.7.14 Rhino uses the `SourceVersion` class, which is not
     // available on Android (even when using desugaring), and `NoClassDefFoundError` is thrown
@@ -47,6 +49,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.junit.jupiter:junit-jupiter-params'
 
-    testImplementation "com.squareup.okhttp3:okhttp:3.12.13"
+
     testImplementation 'com.google.code.gson:gson:2.9.1'
 }
