chore: remove useless file & change minSdk & add dependency

--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'org.nibor.autolink:autolink:0.10.0'
     implementation "com.google.protobuf:protobuf-java:3.11.0"
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
+    implementation "org.brotli:dec:0.1.1"
 
     // do not upgrade to 1.7.14, since in 1.7.14 Rhino uses the `SourceVersion` class, which is not
     // available on Android (even when using desugaring), and `NoClassDefFoundError` is thrown
