--- a/subtitle/build.gradle
+++ b/subtitle/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'fr.noop:charset:1.0.1'
     implementation 'org.apache.commons:commons-lang3:3.4'
     implementation 'stax:stax:1.2.0'
+    implementation 'com.fasterxml:aalto-xml:1.0.0'
     implementation 'commons-cli:commons-cli:1.3.1'
     testImplementation 'junit:junit:4.13.2'
 }
