--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ allprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    version 'v4.2.0-beta'
+    version 'v4.2.0'
     group 'com.github.TeamNewPipe'
 
     repositories {
