--- a/extractor/build.gradle
+++ b/extractor/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'commons-codec:commons-codec:1.16.0'
     implementation "org.json:json:20231013"
+    implementation 'org.cache2k:cache2k-api:2.6.1.Final'
+    implementation 'org.cache2k:cache2k-core:2.6.1.Final'
 
 
     // do not upgrade to 1.7.14, since in 1.7.14 Rhino uses the `SourceVersion` class, which is not
